--- a/experiments/week_3_baseline.ipynb
+++ b/experiments/week_3_baseline.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier"
@@ -74,19 +75,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[  0.       7.8958  14.4542  31.275  512.3292]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# find fare bins based on frequency rather than value\n",
     "garbage, fare_bins = pd.qcut(df_train['Fare'].append(df_test['Fare']), 4, retbins=True)\n",
-    "print(fare_bins)\n",
     "# loops through both train and test set for convenience\n",
     "for df in datasets:\n",
     "    # bin age\n",
@@ -108,7 +100,7 @@
    "source": [
     "# drop unneeded rows\n",
     "for df in datasets:\n",
-    "    df.drop(['Age', 'SibSp', 'Parch', 'Ticket', 'Fare', 'Cabin', 'Name'], axis=1, inplace=True)\n",
+    "    df.drop(['Age', 'SibSp', 'Parch', 'Ticket', 'Fare', 'Cabin', 'Name', 'Fare_binned'], axis=1, inplace=True)\n",
     "    \n",
     "# need to keep passengerID for submission"
    ]
@@ -126,9 +118,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# one-hot encode categoricals using pd.get_dummies\n",
-    "df_train = pd.get_dummies(df_train, columns=['Embarked', 'Sex'])\n",
-    "df_test = pd.get_dummies(df_test, columns=['Embarked', 'Sex'])"
+    "# label encode categoricals \n",
+    "le = LabelEncoder()\n",
+    "le.fit(df_train['Sex'])\n",
+    "df_train.loc[:,'Sex'] = le.transform(df_train['Sex'])\n",
+    "df_test.loc[:,'Sex'] = le.transform(df_test['Sex'])\n",
+    "\n",
+    "le.fit(df_train['Embarked'])\n",
+    "df_train['Embarked'] = le.transform(df_train['Embarked'])\n",
+    "df_test['Embarked'] = le.transform(df_test['Embarked'])"
    ]
   },
   {
@@ -165,15 +163,11 @@
        "PassengerId    0\n",
        "Survived       0\n",
        "Pclass         0\n",
+       "Sex            0\n",
+       "Embarked       0\n",
        "Age_binned     0\n",
-       "Fare_binned    0\n",
        "Family_size    0\n",
        "Is_Alone       0\n",
-       "Embarked_C     0\n",
-       "Embarked_Q     0\n",
-       "Embarked_S     0\n",
-       "Sex_female     0\n",
-       "Sex_male       0\n",
        "dtype: int64"
       ]
      },
@@ -195,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +201,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +228,7 @@
        "            oob_score=False, random_state=12, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -288,10 +282,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LR train set accuracy 0.800561797752809\n",
-      "LR val set accuracy 0.7988826815642458\n",
-      "RF train set accuracy 0.8764044943820225\n",
-      "RF val set accuracy 0.8100558659217877\n"
+      "LR train set accuracy 0.8047752808988764\n",
+      "LR val set accuracy 0.8044692737430168\n",
+      "RF train set accuracy 0.851123595505618\n",
+      "RF val set accuracy 0.7932960893854749\n"
      ]
     }
    ],
@@ -315,9 +309,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Predict for test set\n",
+    "# fit on whole dataset\n",
+    "lr.fit(X, y)\n",
     "\n",
-    "y_pred_test = rf.predict(X_test)\n",
+    "# Predict for test set\n",
+    "y_pred_test = lr.predict(X_test)\n",
     "\n",
     "# Create a Kaggle submission\n",
     "sub = pd.DataFrame({'PassengerId': df_test['PassengerId'],\n",
