Updates to week 3 - nearly finished

--- a/experiments/Week_3_Kaelan.ipynb
+++ b/experiments/Week_3_Kaelan.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -32,10 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_train = pd.read_csv('../input/train.csv')\n",
@@ -54,17 +50,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Fill in missing values\n",
-    "mAge = pd.concat((df_train['Age'], df_test['Age']), axis=0).mean()\n",
+    "#mAge = pd.concat((df_train['Age'], df_test['Age']), axis=0).mean()\n",
     "medFare = pd.concat((df_train['Fare'], df_test['Fare']), axis=0).median()\n",
     "for df in datasets:\n",
-    "    df['Age'] = df['Age'].fillna(mAge)\n",
+    "    #df['Age'] = df['Age'].fillna(mAge)\n",
     "    df['Fare'] = df['Fare'].fillna(medFare)\n",
     "    df['Embarked'] = df['Embarked'].fillna('S')"
    ]
@@ -74,6 +68,161 @@
    "metadata": {},
    "source": [
     "## Step 3: Feature engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Mr        517\n",
+       "Miss      182\n",
+       "Mrs       125\n",
+       "Master     40\n",
+       "Misc       27\n",
+       "Name: Title, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# a blessed kernel: https://www.kaggle.com/manuelatadvice/feature-engineering-titles\n",
+    "# Functions that returns the title from a name. All the name in the dataset has the format \"Surname, Title. Name\"\n",
+    "def get_title(name):\n",
+    "    if '.' in name:\n",
+    "        return name.split(',')[1].split('.')[0].strip()\n",
+    "    else:\n",
+    "        return 'Unknown'\n",
+    "    \n",
+    "train_titles = []\n",
+    "test_titles = []\n",
+    "\n",
+    "for name in df_train['Name']:\n",
+    "    title = get_title(name)\n",
+    "    train_titles.append(title)\n",
+    "    \n",
+    "for name in df_test['Name']:\n",
+    "    title = get_title(name)\n",
+    "    test_titles.append(title)\n",
+    "\n",
+    "\n",
+    "df_train['Title'] = train_titles\n",
+    "df_test['Title'] = test_titles\n",
+    "     \n",
+    "df_train.loc[(df_train['Title'] != 'Mr') & (df_train['Title'] != 'Mrs') & (df_train['Title'] != 'Miss') & (df_train['Title'] != 'Master'), 'Title'] = 'Misc'\n",
+    "df_test.loc[(df_test['Title'] != 'Mr') & (df_test['Title'] != 'Mrs') & (df_test['Title'] != 'Miss') & (df_test['Title'] != 'Master'), 'Title'] = 'Misc'\n",
+    "\n",
+    "#hahahahahahahaha this was very bad of me and i am glad i didnt stick w it \n",
+    "'''\n",
+    "df_train.loc[df_train['Title'] == 'Dr', 'Title'] = 'Misc'\n",
+    "df_train.loc[df_train['Title'] == 'Rev', 'Title'] = 'Misc'\n",
+    "df_train.loc[df_train['Title'] == 'Mlle', 'Title'] = 'Misc'\n",
+    "df_train.loc[df_train['Title'] == 'Col', 'Title'] = 'Misc'\n",
+    "df_train.loc[df_train['Title'] == 'Major', 'Title'] = 'Misc'\n",
+    "df_train.loc[df_train['Title'] == 'the Countess', 'Title'] = 'Misc'\n",
+    "df_train.loc[df_train['Title'] == 'Sir', 'Title'] = 'Misc'\n",
+    "df_train.loc[df_train['Title'] == 'Capt', 'Title'] = 'Misc'\n",
+    "df_train.loc[df_train['Title'] == 'Don', 'Title'] = 'Misc'\n",
+    "df_train.loc[df_train['Title'] == 'Lady', 'Title'] = 'Misc'\n",
+    "df_train.loc[df_train['Title'] == 'Ms', 'Title'] = 'Misc'\n",
+    "df_train.loc[df_train['Title'] == 'Jonkheer', 'Title'] = 'Misc'\n",
+    "df_train.loc[df_train['Title'] == 'Mme', 'Title'] = 'Misc'\n",
+    "'''\n",
+    "\n",
+    "pd.value_counts(df_train['Title'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              Age       Fare     Parch  PassengerId    Pclass     SibSp  \\\n",
+      "Title                                                                     \n",
+      "Mr      32.252151  24.782523  0.159841   659.554822  2.381770  0.282695   \n",
+      "Mrs     36.994118  50.560723  0.832487   685.949239  1.939086  0.659898   \n",
+      "Miss    21.774238  42.684873  0.503846   616.753846  2.346154  0.665385   \n",
+      "Master   5.482642  36.008195  1.377049   658.852459  2.655738  2.049180   \n",
+      "Misc    42.656250  45.574756  0.117647   659.823529  1.382353  0.323529   \n",
+      "\n",
+      "        Survived  \n",
+      "Title             \n",
+      "Mr      0.156673  \n",
+      "Mrs     0.792000  \n",
+      "Miss    0.697802  \n",
+      "Master  0.575000  \n",
+      "Misc    0.444444  \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/ipykernel_launcher.py:1: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "of pandas will change to not sort by default.\n",
+      "\n",
+      "To accept the future behavior, pass 'sort=False'.\n",
+      "\n",
+      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
+      "\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
+   "source": [
+    "thing = (pd.concat((df_train, df_test), axis=0)).groupby(['Title']).mean()\n",
+    "print(thing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "DataError",
+     "evalue": "No numeric types to aggregate",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mDataError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-26-29315c479b6c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdatasets\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Age'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfillna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Age\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Title\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/pandas/core/groupby/groupby.py\u001b[0m in \u001b[0;36mmean\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1304\u001b[0m         \u001b[0mnv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalidate_groupby_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'mean'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'numeric_only'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1305\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1306\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_cython_agg_general\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'mean'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1307\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mGroupByError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1308\u001b[0m             \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/pandas/core/groupby/groupby.py\u001b[0m in \u001b[0;36m_cython_agg_general\u001b[0;34m(self, how, alt, numeric_only, min_count)\u001b[0m\n\u001b[1;32m   1054\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1055\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1056\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mDataError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'No numeric types to aggregate'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1057\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1058\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_wrap_aggregated_output\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mDataError\u001b[0m: No numeric types to aggregate"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "def selectAge(title):\n",
+    "    if title == 'Mr':\n",
+    "        return 32.252\n",
+    "    elif title == 'Mrs':\n",
+    "        return 36.994\n",
+    "    elif title == 'Miss':\n",
+    "        return 21.774\n",
+    "    elif title == 'Master':\n",
+    "        return 5.483\n",
+    "    else:\n",
+    "        return 42.656\n",
+    "'''\n",
+    "\n",
+    "for df in datasets:\n",
+    "    df['Age'].fillna(df.groupby([\"Title\"])[\"Age\"].transform(np.mean), inplace=True)\n",
+    "\n"
    ]
   },
   {
@@ -108,10 +257,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# drop unneeded rows\n",
@@ -130,10 +284,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# one-hot encode categoricals using pd.get_dummies\n",
@@ -143,10 +295,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Split data into X and y, and select features to use\n",
@@ -157,10 +307,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Split data X and y into train and val sets\n",
@@ -170,32 +318,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PassengerId    0\n",
-       "Survived       0\n",
-       "Pclass         0\n",
-       "Age_binned     0\n",
-       "Fare_binned    0\n",
-       "Family_size    0\n",
-       "Is_Alone       0\n",
-       "Embarked_C     0\n",
-       "Embarked_Q     0\n",
-       "Embarked_S     0\n",
-       "Sex_female     0\n",
-       "Sex_male       0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_train.isnull().sum()"
    ]
@@ -209,23 +334,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
-       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-       "          verbose=0, warm_start=False)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fit logistic regression\n",
     "lr = LogisticRegression()\n",
@@ -234,25 +345,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
-       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
-       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "            min_samples_leaf=1, min_samples_split=2,\n",
-       "            min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
-       "            oob_score=False, random_state=12, verbose=0, warm_start=False)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# fit rf\n",
     "rf = RandomForestClassifier(random_state=12)\n",
@@ -268,10 +363,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# define a scoring function\n",
@@ -281,10 +374,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Use model to predict on train and val sets\n",
@@ -297,22 +388,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LR train set accuracy 0.800561797752809\n",
-      "LR val set accuracy 0.7988826815642458\n",
-      "RF train set accuracy 0.8764044943820225\n",
-      "RF val set accuracy 0.8100558659217877\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('LR train set accuracy', acc(y_train, y_pred_trn_lr))\n",
     "print('LR val set accuracy', acc(y_val, y_pred_val_lr))\n",
@@ -329,10 +409,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Predict for test set\n",
@@ -349,9 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -372,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7rc2"
   }
  },
  "nbformat": 4,
