Week 3 action items, mostly finished

--- a/experiments/bennett_week_3_baseline.ipynb
+++ b/experiments/bennett_week_3_baseline.ipynb
@@ -1905,7 +1905,11 @@
     "    Dense(7, input_shape=(1,), activation ='relu'),\n",
     "    Dense(14, activation = 'relu'),\n",
     "    Dense(2, activation = 'relu')\n",
-    "])"
+    "])\n",
+    "\n",
+    "model.summary()\n",
+    "\n",
+    "model.compile(Adam(lr=0.0001), loss = 'sparse_categorial_crossentropy', metrics =['accuracy'])"
    ]
   },
   {
@@ -1959,7 +1963,7 @@
     }
    ],
    "source": [
-    "model.compile(Adam(lr=0.0001), loss = 'sparse_categorial_crossentropy', metrics =['accuracy'])"
+    "model.compile(Adam(lr=0.0001, loss = 'sparse_categorial_crossentropy', metrics =['accuracyt']))"
    ]
   },
   {
