--- a/mitchmathieu/experiments/mitch_week_3_baseline.ipynb
+++ b/mitchmathieu/experiments/mitch_week_3_baseline.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import lightgbm as lgb\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier"
@@ -30,12 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv('../input/train.csv')\n",
-    "df_test = pd.read_csv('../input/test.csv')\n",
+    "df_train = pd.read_csv('../experiments/train.csv')\n",
+    "df_test = pd.read_csv('../experiments/test.csv')\n",
     "\n",
     "# for convenience\n",
     "datasets = [df_train, df_test]"
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +178,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +208,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +235,7 @@
        "            oob_score=False, random_state=12, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,6 +247,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fit lgbm\n",
+    "d_train = lgb.Dataset(X_train, label=y_train)\n",
+    "\n",
+    "params = {}\n",
+    "params['learning_rate'] = 0.003\n",
+    "params['boosting_type'] = 'gbdt'\n",
+    "params['objective'] = 'binary'\n",
+    "params['metric'] = 'binary_logloss'\n",
+    "params['sub_feature'] = 0.5\n",
+    "params['num_leaves'] = 10\n",
+    "params['min_data'] = 50\n",
+    "params['max_depth'] = 10\n",
+    "\n",
+    "lg = lgb.train(params, train_set=d_train)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -254,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,6 +298,36 @@
     "\n",
     "y_pred_trn_rf = rf.predict(X_train)\n",
     "y_pred_val_rf = rf.predict(X_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-48-89b34731122a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0my_pred_val_lg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_val\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# setting threshold to .5\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred_val_lg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0my_pred_val_lg\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m>=\u001b[0m\u001b[1;36m.5\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m        \u001b[0my_pred_val_lg\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "# LGBM prediction\n",
+    "y_pred_trn_lg = lg.predict(X_train)\n",
+    "y_pred_val_lg = lg.predict(X_val)\n",
+    "# setting threshold to .5              not working rn\n",
+    "size = y_pred_val_lg.size()\n",
+    "for i in range(0, size):\n",
+    "    if y_pred_val_lg[i]>=.5:       \n",
+    "       y_pred_val_lg[i]=1\n",
+    "    else:  \n",
+    "       y_pred_val_lg[i]=0"
    ]
   },
   {
@@ -299,7 +352,9 @@
     "print('LR train set accuracy', acc(y_train, y_pred_trn_lr))\n",
     "print('LR val set accuracy', acc(y_val, y_pred_val_lr))\n",
     "print('RF train set accuracy', acc(y_train, y_pred_trn_rf))\n",
-    "print('RF val set accuracy', acc(y_val, y_pred_val_rf))"
+    "print('RF val set accuracy', acc(y_val, y_pred_val_rf))\n",
+    "#print('LGBM train set accuracy', acc(y_train, y_pred_trn_lg))\n",
+    "#print('LGBM val set accuracy', acc(y_val, y_pred_val_lg))"
    ]
   },
   {
