--- a/experiments/Experiment 2 - gaussian naive bayes.ipynb
+++ b/experiments/Experiment 2 - gaussian naive bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,32 +195,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
-       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-       "          verbose=0, warm_start=False)"
+       "GaussianNB(priors=None)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Fit logistic regression\n",
-    "lr = LogisticRegression()\n",
-    "lr.fit(X_train, y_train)"
+    "# Fit gaussian naive bayes\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "clf = GaussianNB()\n",
+    "clf.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +232,7 @@
        "            oob_score=False, random_state=12, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,13 +263,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use model to predict on train and val sets\n",
-    "y_pred_trn_lr = lr.predict(X_train)\n",
-    "y_pred_val_lr = lr.predict(X_val)\n",
+    "y_pred_trn_gnb = clf.predict(X_train)\n",
+    "y_pred_val_gnb = clf.predict(X_val)\n",
     "\n",
     "y_pred_trn_rf = rf.predict(X_train)\n",
     "y_pred_val_rf = rf.predict(X_val)"
@@ -279,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -288,16 +286,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LR train set accuracy 0.800561797752809\n",
-      "LR val set accuracy 0.7988826815642458\n",
+      "gaussian train set accuracy 0.7851123595505618\n",
+      "gaussian val set accuracy 0.7653631284916201\n",
       "RF train set accuracy 0.8764044943820225\n",
       "RF val set accuracy 0.8100558659217877\n"
      ]
     }
    ],
    "source": [
-    "print('LR train set accuracy', acc(y_train, y_pred_trn_lr))\n",
-    "print('LR val set accuracy', acc(y_val, y_pred_val_lr))\n",
+    "print('gaussian train set accuracy', acc(y_train, y_pred_trn_gnb))\n",
+    "print('gaussian val set accuracy', acc(y_val, y_pred_val_gnb))\n",
     "print('RF train set accuracy', acc(y_train, y_pred_trn_rf))\n",
     "print('RF val set accuracy', acc(y_val, y_pred_val_rf))"
    ]
@@ -311,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
