--- a/experiments/Experiment 2 -KNN.ipynb
+++ b/experiments/Experiment 2 -KNN.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tania\\Documents\\anaconda\\lib\\site-packages\\sklearn\\ensemble\\weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -201,10 +210,9 @@
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
-       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-       "          verbose=0, warm_start=False)"
+       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+       "           metric_params=None, n_jobs=1, n_neighbors=5, p=2,\n",
+       "           weights='uniform')"
       ]
      },
      "execution_count": 10,
@@ -213,9 +221,10 @@
     }
    ],
    "source": [
-    "# Fit logistic regression\n",
-    "lr = LogisticRegression()\n",
-    "lr.fit(X_train, y_train)"
+    "# Fit KNN\n",
+    "from sklearn.neighbors import KNeighborsClassifier  \n",
+    "clf = KNeighborsClassifier(n_neighbors=5)  \n",
+    "clf.fit(X_train, y_train)  "
    ]
   },
   {
@@ -270,8 +279,8 @@
    "outputs": [],
    "source": [
     "# Use model to predict on train and val sets\n",
-    "y_pred_trn_lr = lr.predict(X_train)\n",
-    "y_pred_val_lr = lr.predict(X_val)\n",
+    "y_pred_trn_knn = clf.predict(X_train)\n",
+    "y_pred_val_knn = clf.predict(X_val)\n",
     "\n",
     "y_pred_trn_rf = rf.predict(X_train)\n",
     "y_pred_val_rf = rf.predict(X_val)"
@@ -288,16 +297,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LR train set accuracy 0.800561797752809\n",
-      "LR val set accuracy 0.7988826815642458\n",
+      "KNN train set accuracy 0.8441011235955056\n",
+      "KNN val set accuracy 0.7932960893854749\n",
       "RF train set accuracy 0.8764044943820225\n",
       "RF val set accuracy 0.8100558659217877\n"
      ]
     }
    ],
    "source": [
-    "print('LR train set accuracy', acc(y_train, y_pred_trn_lr))\n",
-    "print('LR val set accuracy', acc(y_val, y_pred_val_lr))\n",
+    "print('KNN train set accuracy', acc(y_train, y_pred_trn_knn))\n",
+    "print('KNN val set accuracy', acc(y_val, y_pred_val_knn))\n",
     "print('RF train set accuracy', acc(y_train, y_pred_trn_rf))\n",
     "print('RF val set accuracy', acc(y_val, y_pred_val_rf))"
    ]
