--- a/experiments/Experiment 2 -SVC.ipynb
+++ b/experiments/Experiment 2 -SVC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,32 +195,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
-       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-       "          verbose=0, warm_start=False)"
+       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='linear',\n",
+       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "  tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Fit logistic regression\n",
-    "lr = LogisticRegression()\n",
-    "lr.fit(X_train, y_train)"
+    "# Fit SVC\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "clf = SVC(kernel='linear')\n",
+    "clf.fit(X_train,y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +237,7 @@
        "            oob_score=False, random_state=12, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,6 +249,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tania\\Documents\\anaconda\\lib\\site-packages\\sklearn\\cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
+      "C:\\Users\\tania\\Documents\\anaconda\\lib\\site-packages\\sklearn\\grid_search.py:42: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
+      "  DeprecationWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#hyperparameter tuning\n",
+    "from sklearn.grid_search import GridSearchCV\n",
+    "def run_gridsearch(X_train, y_train, clf, param_grid, cv=5):\n",
+    "    grid_search = GridSearchCV(clf,\n",
+    "                               param_grid=param_grid,\n",
+    "                               cv=cv)\n",
+    "    start = time()\n",
+    "    grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "    print((\"\\nGridSearchCV took {:.2f} \"\n",
+    "           \"seconds for {:d} candidate \"\n",
+    "           \"parameter settings.\").format(time() - start,\n",
+    "                len(grid_search.grid_scores_)))\n",
+    "\n",
+    "    top_params = report(grid_search.grid_scores_, 3)\n",
+    "    return  top_params"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -254,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,13 +303,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use model to predict on train and val sets\n",
-    "y_pred_trn_lr = lr.predict(X_train)\n",
-    "y_pred_val_lr = lr.predict(X_val)\n",
+    "y_pred_trn_SVC = clf.predict(X_train)\n",
+    "y_pred_val_SVC = clf.predict(X_val)\n",
     "\n",
     "y_pred_trn_rf = rf.predict(X_train)\n",
     "y_pred_val_rf = rf.predict(X_val)"
@@ -279,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 61,
    "metadata": {
     "scrolled": true
    },
@@ -288,16 +326,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LR train set accuracy 0.800561797752809\n",
-      "LR val set accuracy 0.7988826815642458\n",
+      "SVC train set accuracy 0.7879213483146067\n",
+      "SVC val set accuracy 0.7821229050279329\n",
       "RF train set accuracy 0.8764044943820225\n",
       "RF val set accuracy 0.8100558659217877\n"
      ]
     }
    ],
    "source": [
-    "print('LR train set accuracy', acc(y_train, y_pred_trn_lr))\n",
-    "print('LR val set accuracy', acc(y_val, y_pred_val_lr))\n",
+    "print('SVC train set accuracy', acc(y_train, y_pred_trn_SVC))\n",
+    "print('SVC val set accuracy', acc(y_val, y_pred_val_SVC))\n",
     "print('RF train set accuracy', acc(y_train, y_pred_trn_rf))\n",
     "print('RF val set accuracy', acc(y_val, y_pred_val_rf))"
    ]
@@ -311,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +361,7 @@
     "sub = pd.DataFrame({'PassengerId': df_test['PassengerId'],\n",
     "                    'Survived': y_pred_test})\n",
     "\n",
-    "sub.to_csv('week_3_baseline.csv', index=False)"
+    "sub.to_csv('Experiment2-SVC.csv', index=False)"
    ]
   },
   {
