--- a/experiments/Experiment 2-decision tree.ipynb
+++ b/experiments/Experiment 2-decision tree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,32 +195,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
-       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-       "          verbose=0, warm_start=False)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Fit logistic regression\n",
-    "lr = LogisticRegression()\n",
-    "lr.fit(X_train, y_train)"
+    "# implement decision tree\n",
+    "from sklearn import tree\n",
+    "clf = tree.DecisionTreeClassifier()\n",
+    "clf = clf.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +221,7 @@
        "            oob_score=False, random_state=12, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,6 +233,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hyperparameter tuning\n",
+    "from sklearn.grid_search import GridSearchCV\n",
+    "def run_gridsearch(X_train, y_train, clf, param_grid, cv=5):\n",
+    "    grid_search = GridSearchCV(clf,\n",
+    "                               param_grid=param_grid,\n",
+    "                               cv=cv)\n",
+    "    start = time()\n",
+    "    grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "    print((\"\\nGridSearchCV took {:.2f} \"\n",
+    "           \"seconds for {:d} candidate \"\n",
+    "           \"parameter settings.\").format(time() - start,\n",
+    "                len(grid_search.grid_scores_)))\n",
+    "\n",
+    "    top_params = report(grid_search.grid_scores_, 3)\n",
+    "    return  top_params"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -254,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,13 +276,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use model to predict on train and val sets\n",
-    "y_pred_trn_lr = lr.predict(X_train)\n",
-    "y_pred_val_lr = lr.predict(X_val)\n",
+    "y_pred_trn_tree = clf.predict(X_train)\n",
+    "y_pred_val_tree = clf.predict(X_val)\n",
     "\n",
     "y_pred_trn_rf = rf.predict(X_train)\n",
     "y_pred_val_rf = rf.predict(X_val)"
@@ -279,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 139,
    "metadata": {
     "scrolled": true
    },
@@ -288,16 +299,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LR train set accuracy 0.800561797752809\n",
-      "LR val set accuracy 0.7988826815642458\n",
+      "Tree train set accuracy 0.8778089887640449\n",
+      "Tree val set accuracy 0.7988826815642458\n",
       "RF train set accuracy 0.8764044943820225\n",
       "RF val set accuracy 0.8100558659217877\n"
      ]
     }
    ],
    "source": [
-    "print('LR train set accuracy', acc(y_train, y_pred_trn_lr))\n",
-    "print('LR val set accuracy', acc(y_val, y_pred_val_lr))\n",
+    "print('Tree train set accuracy', acc(y_train, y_pred_trn_tree))\n",
+    "print('Tree val set accuracy', acc(y_val, y_pred_val_tree))\n",
     "print('RF train set accuracy', acc(y_train, y_pred_trn_rf))\n",
     "print('RF val set accuracy', acc(y_val, y_pred_val_rf))"
    ]
@@ -311,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +334,7 @@
     "sub = pd.DataFrame({'PassengerId': df_test['PassengerId'],\n",
     "                    'Survived': y_pred_test})\n",
     "\n",
-    "sub.to_csv('week_3_baseline.csv', index=False)"
+    "sub.to_csv('Experiment2-decisiontree.csv', index=False)"
    ]
   },
   {
