Still trying to fix broken ages

--- a/experiments/Week_3_Kaelan.ipynb
+++ b/experiments/Week_3_Kaelan.ipynb
@@ -125,16 +125,6 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "#thing = (pd.concat((df_train, df_test), ignore_index=True)).groupby(['Title']).mean()\n",
-    "#print(thing)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -162,7 +152,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,6 +162,26 @@
     "\n",
     "# opted for median value to iron out any weirdness title selection might've given\n",
     "grouped.Age.median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.groupby.DataFrameGroupBy object at 0x10a4b20b8>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped"
    ]
   },
   {
