--- a/experiments/mitch_week_3_baseline.ipynb
+++ b/experiments/mitch_week_3_baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "            oob_score=False, random_state=12, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,37 +302,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-48-89b34731122a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0my_pred_val_lg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_val\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# setting threshold to .5\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred_val_lg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0my_pred_val_lg\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m>=\u001b[0m\u001b[1;36m.5\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m        \u001b[0my_pred_val_lg\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not callable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# LGBM prediction\n",
     "y_pred_trn_lg = lg.predict(X_train)\n",
     "y_pred_val_lg = lg.predict(X_val)\n",
-    "# setting threshold to .5              not working rn\n",
-    "size = y_pred_val_lg.size()\n",
-    "for i in range(0, size):\n",
+    "# setting threshold to .5\n",
+    "#size = y_pred_val_lg.size()\n",
+    "for i in range(0, y_pred_trn_lg.size):\n",
+    "    if y_pred_trn_lg[i]>=.5:       \n",
+    "       y_pred_trn_lg[i]=1\n",
+    "    else:  \n",
+    "       y_pred_trn_lg[i]=0\n",
+    "    \n",
+    "for i in range(0, y_pred_val_lg.size):\n",
     "    if y_pred_val_lg[i]>=.5:       \n",
     "       y_pred_val_lg[i]=1\n",
     "    else:  \n",
-    "       y_pred_val_lg[i]=0"
+    "       y_pred_val_lg[i]=0\n",
+    "    \n",
+    "#print(y_pred_trn_lg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {
     "scrolled": true
    },
@@ -344,7 +340,9 @@
       "LR train set accuracy 0.800561797752809\n",
       "LR val set accuracy 0.7988826815642458\n",
       "RF train set accuracy 0.8764044943820225\n",
-      "RF val set accuracy 0.8100558659217877\n"
+      "RF val set accuracy 0.8100558659217877\n",
+      "LGBM train set accuracy 0.6587078651685393\n",
+      "LGBM val set accuracy 0.6480446927374302\n"
      ]
     }
    ],
@@ -353,8 +351,8 @@
     "print('LR val set accuracy', acc(y_val, y_pred_val_lr))\n",
     "print('RF train set accuracy', acc(y_train, y_pred_trn_rf))\n",
     "print('RF val set accuracy', acc(y_val, y_pred_val_rf))\n",
-    "#print('LGBM train set accuracy', acc(y_train, y_pred_trn_lg))\n",
-    "#print('LGBM val set accuracy', acc(y_val, y_pred_val_lg))"
+    "print('LGBM train set accuracy', acc(y_train, y_pred_trn_lg))\n",
+    "print('LGBM val set accuracy', acc(y_val, y_pred_val_lg))"
    ]
   },
   {
@@ -366,14 +364,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Predict for test set\n",
-    "\n",
-    "y_pred_test = rf.predict(X_test)\n",
-    "\n",
+    "y_pred_test = lg.predict(X_test)\n",
+    "# classify to either 1 or 0\n",
+    "for i in range(0, y_pred_test.size):\n",
+    "    if y_pred_test[i]>=.5:       \n",
+    "       y_pred_test[i]=1\n",
+    "    else:  \n",
+    "       y_pred_test[i]=0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create a Kaggle submission\n",
     "sub = pd.DataFrame({'PassengerId': df_test['PassengerId'],\n",
     "                    'Survived': y_pred_test})\n",
