--- a/experiments/mitch_week_3_baseline.ipynb
+++ b/experiments/mitch_week_3_baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "            oob_score=False, random_state=12, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 82,
    "metadata": {
     "scrolled": true
    },
@@ -364,23 +364,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Predict for test set\n",
     "y_pred_test = lg.predict(X_test)\n",
-    "# classify to either 1 or 0\n",
+    "# fit predicitons to either 1 or 0\n",
     "for i in range(0, y_pred_test.size):\n",
     "    if y_pred_test[i]>=.5:       \n",
     "       y_pred_test[i]=1\n",
     "    else:  \n",
-    "       y_pred_test[i]=0\n"
+    "       y_pred_test[i]=0\n",
+    "\n",
+    "# cast to int\n",
+    "y_pred_test = y_pred_test.astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
