--- a/experiments/mitch_week_3_baseline.ipynb
+++ b/experiments/mitch_week_3_baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "            oob_score=False, random_state=12, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,14 +256,16 @@
     "d_train = lgb.Dataset(X_train, label=y_train)\n",
     "\n",
     "params = {}\n",
-    "params['learning_rate'] = 0.003\n",
-    "params['boosting_type'] = 'gbdt'\n",
+    "params['learning_rate'] = 0.05         # from 0.003\n",
+    "params['boosting_type'] = 'dart'       # or 'gbdt'\n",
     "params['objective'] = 'binary'\n",
     "params['metric'] = 'binary_logloss'\n",
-    "params['sub_feature'] = 0.5\n",
-    "params['num_leaves'] = 10\n",
-    "params['min_data'] = 50\n",
+    "params['sub_feature'] = 0.7\n",
+    "params['num_leaves'] = 41              # from 10\n",
+    "params['min_data'] = 20                #from 50\n",
     "params['max_depth'] = 10\n",
+    "params['drop_rate'] = 0.15             #~65% --> ~80%\n",
+    "\n",
     "\n",
     "lg = lgb.train(params, train_set=d_train)"
    ]
@@ -277,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 131,
    "metadata": {
     "scrolled": true
    },
@@ -341,8 +343,8 @@
       "LR val set accuracy 0.7988826815642458\n",
       "RF train set accuracy 0.8764044943820225\n",
       "RF val set accuracy 0.8100558659217877\n",
-      "LGBM train set accuracy 0.6587078651685393\n",
-      "LGBM val set accuracy 0.6480446927374302\n"
+      "LGBM train set accuracy 0.8202247191011236\n",
+      "LGBM val set accuracy 0.7932960893854749\n"
      ]
     }
    ],
@@ -364,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
